<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textColor="@color/white_icon"
        android:text="@string/change_names_dialog" />

    <EditText
        android:id="@+id/etKM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/john"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/etKT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/jerry"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColorHint="@color/colorAccent" />


</LinearLayout>