<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.madtadpoles.HelpActivity">



    <ImageView
        android:id="@+id/top_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_fight_blurred" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/howToPlay"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/top_background"
        app:layout_constraintEnd_toEndOf="@+id/top_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/top_background"
        app:layout_constraintTop_toTopOf="@+id/top_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/helpInfo"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/my_button_grey"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="2"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/startHelp"
                    android:textSize="12sp" />

                <ImageView
                    android:contentDescription="@string/titleImage"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="1"
                    android:src="@drawable/howto_1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/my_button_grey"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="2"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/countdownHelp"
                    android:textSize="12sp" />

                <ImageView
                    android:contentDescription="@string/weaponImage"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="1"
                    android:src="@drawable/howto_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/my_button_grey"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="2"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/hpHelp"
                    android:textSize="12sp" />

                <ImageView
                    android:contentDescription="@string/hpImage"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="1"
                    android:src="@drawable/howto_3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/my_button_grey"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="2"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/namesHelp"
                    android:textSize="12sp" />

                <ImageView
                    android:contentDescription="@string/imageNames"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="1"
                    android:src="@drawable/howto_4" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>
